--- a/index.html
+++ b/index.html
@@ -4,39 +4,48 @@
 	<meta name = "viewport" content="width=device-width">
 	<meta charset="UTF-8">
 	<title>Carrusel</title>
+	<link rel="stylesheet" href="assets/css/grid.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-<!-- Sección header -->
 	<header>
-		<div class="container">
-		<h1>Este es un título</h1>
-		<button type="button" id="hide">Hide</button>
-		<button type="button" id="show">Show</button>
-				<img src="assets/img/instagram.png" alt="Instagram">
-		</div>
+		<h1>lalala</h1>
 	</header>
-	<!-- Sección foto -->
 	<section>
-		<div class="container center">
-			<div class="img"></div>
+		<div class="slideshow">
+			<ul class="slider">
+				<li>
+					<img src="assets/imagenes/1.jpg" alt="">
+				</li>
+				<li>
+					<img src="assets/imagenes/2.jpg" alt="">
+				</li>
+				<li>
+					<img src="assets/imagenes/3.jpg" alt="">
+				</li>
+				<li>
+					<img src="assets/imagenes/4.jpg" alt="">
+				</li>
+				<li>
+					<img src="assets/imagenes/5.jpg" alt="">
+				</li>
+			</ul>
+			<div class="left"><span class="fa fa-chevron-left"></span></div>
+			<ol class="pagination">
+				<li><span class="fa fa-circle"></span></li>
+				<li><span class="fa fa-circle"></span></li>
+				<li><span class="fa fa-circle"></span></li>
+				<li><span class="fa fa-circle"></span></li>
+				<li><span class="fa fa-circle"></span></li>
+			</ol>
+			<div class="right"><span class="fa fa-chevron-right"></span></div>
 		</div>
-	</section>
 
-	<!-- Sección textarea, botón y contenedor mensajes -->
-	<section class="center">
-		<div class="container">
-			<textarea class="txt" id="comment" placeholder="Añade un comentario..."></textarea>
-			<button type="submit" id="btn"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</button>
-			<!-- contenedor comentarios -->
-			<div id="cont"></div>
-
-		</div>
 	</section>
 
 	<!-- Script Files -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://use.fontawesome.com/7873633050.js"></script>
-	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
