--- a/index.html
+++ b/index.html
@@ -9,38 +9,57 @@
 </head>
 <body>
 	<header>
-		<h1>lalala</h1>
+		<div class="container">
+			<div class="row">
+				<div class="col-12 center">
+						<h1>Carrusel</h1>
+				</div>
+			</div>
+		</div>
 	</header>
 	<section>
-		<div class="slideshow">
-			<ul class="slider">
-				<li>
-					<img src="assets/imagenes/1.jpg" alt="">
-				</li>
-				<li>
-					<img src="assets/imagenes/2.jpg" alt="">
-				</li>
-				<li>
-					<img src="assets/imagenes/3.jpg" alt="">
-				</li>
-				<li>
-					<img src="assets/imagenes/4.jpg" alt="">
-				</li>
-				<li>
-					<img src="assets/imagenes/5.jpg" alt="">
-				</li>
-			</ul>
-			<div class="left"><span class="fa fa-chevron-left"></span></div>
-			<ol class="pagination">
-				<li><span class="fa fa-circle"></span></li>
-				<li><span class="fa fa-circle"></span></li>
-				<li><span class="fa fa-circle"></span></li>
-				<li><span class="fa fa-circle"></span></li>
-				<li><span class="fa fa-circle"></span></li>
-			</ol>
-			<div class="right"><span class="fa fa-chevron-right"></span></div>
+		<div class="container">
+			<div class="slideshow">
+				<div class="row">
+					<div class="col-12">
+						<ul class="slider">
+							<li>
+								<img src="assets/imagenes/1.jpg" alt="">
+							</li>
+							<li>
+								<img src="assets/imagenes/2.jpg" alt="">
+							</li>
+							<li>
+								<img src="assets/imagenes/3.jpg" alt="">
+							</li>
+							<li>
+								<img src="assets/imagenes/4.jpg" alt="">
+							</li>
+							<li>
+								<img src="assets/imagenes/5.jpg" alt="">
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-3">
+						<div class="left"><span class="fa fa-chevron-left"></span></div>
+					</div>
+					<div class="col-6">
+						<ol class="pagination">
+							<li><span class="fa fa-circle"></span></li>
+							<li><span class="fa fa-circle"></span></li>
+							<li><span class="fa fa-circle"></span></li>
+							<li><span class="fa fa-circle"></span></li>
+							<li><span class="fa fa-circle"></span></li>
+						</ol>
+					</div>
+					<div class="col-3">
+						<div class="right"><span class="fa fa-chevron-right"></span></div>
+					</div>
+				</div>
+			</div>
 		</div>
-
 	</section>
 
 	<!-- Script Files -->
